tests/sumo/errors/unknown_option/options.sumo
--no-step-log --no-duration-log --net-file=net.net.xml --routes=routes.rou.xml --test_this_funky_but_not_exitsing_option
